--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "chai": "^4.2.0",
     "jest": "^24.8.0",
     "nodemon": "^1.19.1",
+    "prettier": "1.19.1",
     "supertest": "^4.0.2",
     "ts-jest": "^24.0.2",
     "ts-node": "^8.3.0",
