--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "gnonce-expressjs",
-  "version": "1.0.0",
-  "description": "Boilerplate for modern Express.js powered backend application.",
+  "name": "gnonce-expressjs-starter",
+  "version": "1.0.1",
+  "description": "Boilerplate for Express.js application.",
+  "license": "MIT",
   "main": "index.ts",
   "scripts": {
     "start": "npm run start:prod",
     "start:dev": "NODE_ENV=development nodemon ./src/app.ts --exec ts-node",
     "start:prod": "node ./dist/app.js",
     "build": "tsc -p ./",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "lint": "tslint -p tsconfig.json -c tslint.json",
     "clean": "rm -rf dist",
     "test": "jest",
     "coverage": "jest --collectCoverageFrom=./**.ts --coverage ./"
@@ -16,23 +19,25 @@
     "@types/body-parser": "^1.17.1",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.1",
-    "@types/node": "^12.12.22",
+    "@types/morgan": "^1.7.37",
     "body-parser": "^1.19.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
-    "typescript": "^3.5.2"
+    "morgan": "^1.9.1",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "@types/jest": "^24.0.18",
+    "@types/node": "^12.7.8",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.0.0",
     "@typescript-eslint/parser": "^2.0.0",
-    "chai": "^4.2.0",
     "jest": "^24.8.0",
     "nodemon": "^1.19.1",
     "prettier": "1.19.1",
     "supertest": "^4.0.2",
     "ts-jest": "^24.0.2",
+    "ts-loader": "^6.2.0",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.2"
   }
