--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gnonce-expressjs-starter",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Boilerplate for Express.js application.",
   "license": "MIT",
   "main": "index.ts",
@@ -10,7 +10,7 @@
     "start:prod": "node ./dist/app.js",
     "build": "tsc -p ./",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "lint": "tslint -p tsconfig.json -c tslint.json",
+    "lint": "eslint . --ext .ts",
     "clean": "rm -rf dist",
     "test": "jest",
     "coverage": "jest --collectCoverageFrom=./**.ts --coverage ./"
@@ -30,13 +30,14 @@
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.8",
     "@types/supertest": "^2.0.8",
-    "@typescript-eslint/eslint-plugin": "^2.0.0",
-    "@typescript-eslint/parser": "^2.0.0",
+    "@typescript-eslint/eslint-plugin": "^2.34.0",
+    "@typescript-eslint/parser": "^2.34.0",
+    "eslint": "^6.8.0",
     "jest": "^24.8.0",
-    "nodemon": "^1.19.1",
+    "nodemon": "^2.0.12",
     "prettier": "1.19.1",
     "supertest": "^4.0.2",
-    "ts-jest": "^24.0.2",
+    "ts-jest": "^27.0.5",
     "ts-loader": "^6.2.0",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.2"
